fixed bio-pic alignment for 608px screen

--- a/css/main.css
+++ b/css/main.css
@@ -266,15 +266,17 @@ nav {
   width: 40%;
   top: 10%;
   }
+
   .main-nav {
     display:  block;
   }
+
   .picture {
     width: 50%;
   }
 
-  .bio-picture {
-    text-align: center;
+  .picture {
+    margin-left: 25%;
   }
 
 }
